--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bobby/array-special-helper",
-    "description": "some special algorithm to help you use array",
+    "description": "Some special algorithm help to use array",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -9,6 +9,11 @@
             "email": "995933447@qq.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Bobby\\ArraySpecialHelper\\": "/src"
+        }
+    },
     "minimum-stability": "stable",
     "require": {}
 }
