一些特殊算法用于操作特殊的数组需求

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Bobby\\ArraySpecialHelper\\": "/src"
+            "Bobby\\ArraySpecialHelper\\": "src/"
         }
     },
     "minimum-stability": "stable",
